--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   scoped_model: ^0.3.0
   shared_preferences: any
   photofilters: ^2.0.1
+  image_picker: ^0.6.7+11
 
 dev_dependencies:
   flutter_test:
