--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,12 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
-
 target 'Runner' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for Runner
+    pod 'Firebase/MLVisionBarcodeModel'
+    pod 'Firebase/MLVisionFaceModel'
+    pod 'Firebase/MLVisionLabelModel'
+    pod 'Firebase/MLVisionTextModel'
 end
