--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: any
   firebase_ml_vision: ^0.9.3+8
   camera: ^0.5.7+4
   path_provider: ^1.6.7
@@ -37,6 +37,12 @@ dependencies:
   shared_preferences: any
   photofilters: ^2.0.1
   image_picker: ^0.6.7+11
+  clipboard_manager: ^0.0.4
+  pdf: ^1.11.2
+  printing: ^3.6.1
+  directory_picker: ^1.0.0
+  open_file: ^3.0.1
+  webview_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +53,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
