--- a/my_webview/android/local.properties
+++ b/my_webview/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:/Users/Hi/AppData/Local/Android/Sdk
-flutter.sdk=E:\\flutter
+sdk.dir=/Users/hoangdo/Library/Android/sdk
+flutter.sdk=/Users/hoangdo/flutter/flutter
